--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <br/><br/><br/>
     </h5>
   </div>
+  <script src="compiled/src/components/Details.js"> </script>
   <script src="compiled/src/config/youtube.js"></script>
   <script src="src/lib/searchYouTube.js"></script>
+  <script src="src/lib/dataYouTube.js"></script>
   <script src="src/data/exampleVideoData.js"> </script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
